--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="footer">
-            <h5 style="text-align: center; color: #c17f21">SE-2331<br>Pavel Lukoyanov</h5>
+            <h5 style="text-align: center; color: #c17f21">SE-2331<br>Pavel Lukoyanov &amp; Maksat Sagyndyk</h5>
         </div>
     </body>
 </html>
