--- a/static/index.html
+++ b/static/index.html
@@ -18,13 +18,13 @@
                 <h3>Giganote</h3>
             </div>
             <div class="vertical-container flex-justifycenter inactive" id="authPage" style="height: 100%; max-width: 300px">
-                <p>Please wait...</p>
+                <div class="loader"></div>
             </div>
             <div class="vertical-container flex-aligncenter inactive" id="mainPage" style="gap: 10px; height: 100%">
-                <p>Please wait...</p>
+                <div class="loader"></div>
             </div>
             <div class="vertical-container flex-aligncenter flex-justifycenter" id="loading" style="gap: 10px; height: 100%">
-                <p>Please wait...</p>
+                <div class="loader"></div>
             </div>
         </div>
         <div class="footer">
