Admin panel added

--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,7 @@
                 <div class="giganote"></div>
                 <div class="vertical-divisor"></div>
                 <button class="bobatron" id="newTask" Bt-CM="0.5" style="display: none">New task</button>
+                <button class="bobatron" id="admin" Bt-CM="0.5" style="display: none">Admin</button>
             </div>
             <div class="horizontal-container flex-aligncenter" style="justify-content: flex-end; width: fit-content">
                 <div id="navBarLoader" class="loader loaderHidden"></div>
