--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,12 @@
         <script src="JS/Main.js"></script>
         <script src="JS/UI.js"></script>
         <title>Giganote</title>
+
+        <style>
+            body {
+                height: 100vh
+            }
+        </style>
     </head>
     <body>
         <header class="bobatron">
