--- a/static/index.html
+++ b/static/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="footer">
-            <h5 style="text-align: center; color: #bdc1ff">SE-2331<br>Pavel Lukoyanov &amp; Maksat Sagyndyk</h5>
+            <h5 style="text-align: center; color: #bdc1ff">SE-2331<br>Pavel Lukoyanov, Maksat Sagyndyk,<br>Amir Kairov</h5>
         </div>
     </body>
 </html>
